--- a/src/style.css
+++ b/src/style.css
@@ -4,15 +4,15 @@ body{
 }
 .js-clock{
   font-weight:bold;
-  font-size:200px;
-  margin-top:300px;
-  margin-bottom:100px;
+  font-size:180px;
+  margin-top:150px;
+  margin-bottom:50px;
 }
 .js-usrName{
   font-size:30px;
   text-align: center;
-  margin-top:100px;
-  margin-bottom: 80px;
+  margin-top:30px;
+  margin-bottom: 50px;
 }
 .js-usrName input{
   border: none;
@@ -64,4 +64,7 @@ button{
   height: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
+}
+.js-weather{
+  text-align:right;
 }
