--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@ body{
 }
 .js-clock{
   font-weight:bold;
-  font-size:180px;
-  margin-top:150px;
+  font-size:140px;
+  margin-top:50px;
   margin-bottom:50px;
 }
 .js-usrName{
@@ -17,17 +17,18 @@ body{
 .js-usrName input{
   border: none;
   background: transparent;
-  border-bottom:3px solid white;
-  font-size:30px;
+  border-bottom:2px solid white;
+  size:30px;
+  font-size:20px;
   text-align: center;
   color:white;
 }
 .js-toDoList input{
   border: none;
   background: transparent;
-  border-bottom:3px solid white;
-  size:30px;
-  font-size:20px;
+  border-bottom:1px solid white;
+  size:20px;
+  font-size:15px;
   text-align: center;
   color:white;
 }
@@ -35,13 +36,13 @@ ul{
   list-style:none
 }
 li{
-  font-size:30px;
+  font-size:20px;
 }
 button{
   margin-left:10px;
 }
 .greeting{
-
+  font-weight:lighter;
 }
 
 .hidden{
