--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 html{
-  height:100%;
+  height:70%;
 }
 
 .title{
   width:100%;
-  /*height:200px;*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-image:url('/image/main.jpg');
   background-color: #08298A;
+}
+h1{
+  text-align:center;
+  margin:0px;
 }
 body{
   display:grid;
@@ -15,11 +21,6 @@ body{
   margin:0px;
   font:Sans-serif;
   height:100%;
-}
-h1{
-  text-align:center;
-  padding-top:30px;
-  margin:0px;
 }
 .content{
   height:100%;
@@ -38,7 +39,7 @@ input{
   margin-left:10px;
   padding:0px;
 }
-form{
+.mail-container div{
   text-align: right;
   width:80%;
   height:100%;
