menu_table buttons added

--- a/templates/menu_table.html
+++ b/templates/menu_table.html
@@ -6,12 +6,11 @@
   </head>
   <body>
     <form class="menu">
-      <button type="submit" name="mealBtn" action="/meal" formmethod="get">밥</button>
-      <button type="submit" name="goWalkBtn">산책</button>
-      <button type="submit" name="snackBtn">간식</button>
-      <button type="submit" name="endingBtn">메뉴 종료</button>
-      <button type="submit" name="exitBtn">게임 나가기</button>
+      <button type="button" name="mealBtn" onclick="location.href='/meal'">밥</button>
+      <button type="button" name="goWalkBtn" onclick="location.href='/goWalk'">산책</button>
+      <button type="button" name="snackBtn" onclick="location.href='/snack'">간식</button>
+      <button type="button" name="endingBtn" onclick="location.href='/ending'">메뉴 종료</button>
+      <button type="button" name="exitBtn">게임 나가기</button>
     </form>
   </body>
 </html>
-*
