--- a/templates/afterMeal.html
+++ b/templates/afterMeal.html
@@ -9,7 +9,7 @@
     <div class="endEating">
       {{myDog['name']}}(이)가 밥을 다 먹었습니다.
       <form class="" action="/menu_table" method="get">
-        <button type="submit" name="menuBtn">메뉴</button>
+        <button type="submit">메뉴</button>
       </form>
     </div>
     <script type="text/javascript">
