--- a/templates/goWalk.html
+++ b/templates/goWalk.html
@@ -17,7 +17,7 @@
     <script type="text/javascript">
       const myDog={{myDog|tojson|safe}};
       const walkStartContainer=document.querySelector(".walkStart");
-      walkStartContainer.innerText+=myDog['name']+': '
+      walkStartContainer.innerText+=myDog['name']+': '  //walkstart()
       walkStartContainer.innerText+=myDog['mbti'][0]=='E'?'산책 너무 좋아~. 빨리 밖에 나가고 싶었어!!':'음. 집에서 쉬고 싶었는데...밖에 나가는 것도 괜찮지...ㅎㅎ';
     </script>
   </body>
