--- a/templates/walkTogether.html
+++ b/templates/walkTogether.html
@@ -27,7 +27,7 @@
       }
 
       const endWalkingTextContainer=document.querySelector('.text');
-      endWalkingTextContainer.innerText+=myDog['name']+': ';
+      endWalkingTextContainer.innerText+=myDog['name']+': ';  //home()
       endWalkingTextContainer.innerText+=myDog['mbti'][3]=='P'?'집에가면 뭐하지? 무계획 인생~':'짐에가서 저녁 먹으면 딱이겠다!';
     </script>
   </body>
