--- a/templates/afterMeal.html
+++ b/templates/afterMeal.html
@@ -17,7 +17,7 @@
       const myDog={{myDog|tojson|safe}};
       const result=document.querySelector('.result');
       if(choice['choiceBtn']=='1'){
-          result.innerText+=myDog['name']+': ';
+          result.innerText+=myDog['name']+': ';  //act()
           result.innerText+=myDog['mbti'][2]=='F'?'주인이심심한가봐. 내가 놀아줘야징':'밥 먹는데 걸리적거리게. 왜 서있는거야!';
       }
     </script>
