--- a/templates/meal.html
+++ b/templates/meal.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
       const myDog={{myDog|tojson|safe}};
       const feedStartContainer=document.querySelector(".feedStart");
-      feedStartContainer.innerText+=myDog['name']+': '
+      feedStartContainer.innerText+=myDog['name']+': '  //feedstart()
       feedStartContainer.innerText+=myDog['mbti'][0]=='E'?'좋아!!':'부담스러워서 못 먹겠어ㅜㅜ';
     </script>
   </body>
