--- a/templates/snack.html
+++ b/templates/snack.html
@@ -5,6 +5,19 @@
     <title></title>
   </head>
   <body>
-    SNACK
+    <div class="snack">
+      {{myDog['name']}}(이)에게 간식을 줍니다.<br>
+    </div>
+    <div class="endSnack">
+      <form class="" action="/menu_table" method="get">
+        <button type="submit">메뉴</button>
+      </form>
+    </div>
+    <script type="text/javascript">
+      const myDog={{myDog|tojson|safe}};
+      const snackContainer=document.querySelector('.snack');
+      snackContainer.innerText+=myDog['name']+': ';  //snack()
+      snackContainer.innerText+=myDog['mbti'][2]=='S'?'와 맛있는 냄새다!!':'이거 하면 간식 더 주겠지?';
+    </script>
   </body>
 </html>
