--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>우리집 강쥐의<br>MBTI 유형 테스트</h1>
-    <form class="puppyInfo" action="/" method="post">
+    <form class="puppyInfo" action="/home" method="post">
         <div class="margin" style="width:300px;">
             <div class="inputDiv">
                 <label for="userName">플레이어 이름:</label>
