--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
         <div class="margin" style="width:300px;">
             <div class="inputDiv">
                 <label for="userName">플레이어 이름:</label>
-                <input type="text" name="userName" value="플레이어 이름">
+                <input type="text" name="userName">
             </div>
             <div class="inputDiv">
                 <label for="dogName">강아지 이름:</label>
-                <input type="text" name="dogName" value="강아지 이름">
+                <input type="text" name="dogName">
             </div>
             <div class="submitDiv">
                 <button class="" type="submit">제출</button>
