--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 <input type="text" name="dogName">
             </div>
             <div class="submitDiv">
-                <button class="" type="submit">제출</button>
+                <input type="submit">
             </div>
         </div>
     </form>
