--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,11 @@
         <div class="margin" style="width:300px;">
             <div class="inputDiv">
                 <label for="userName">플레이어 이름:</label>
-                <input type="text" name="userName" placeholder="주인님 이름을 입력해 주세요.">
+                <input type="text" name="userName" placeholder="주인님의 이름을 입력해 주세요." autofocus>
             </div>
             <div class="inputDiv">
                 <label for="dogName">강아지 이름:</label>
-                <input type="text" name="dogName" placeholder="강아지 이름을 입력해 주세요.">
+                <input type="text" name="dogName" placeholder="강아지의 이름을 입력해 주세요.">
             </div>
             <div class="submitDiv">
                 <button class="" type="submit">제출</button>
