--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
 <body>
     <h1>우리집 강쥐의<br>MBTI 유형 테스트</h1>
     <form class="puppyInfo" action="/" method="post">
-        <div class="margin" style="width:400px;">
+        <div class="margin" style="width:500px;">
             <div class="inputDiv">
                 <label for="userName">플레이어 이름:</label>
-                <input type="text" name="userName" placeholder="주인님의 이름을 입력하세요." autofocus required>
+                <input type="text" name="userName" placeholer="주인님의 이름을 입력하세요." autofocus required>
             </div>
             <div class="inputDiv">
                 <label for="dogName">강아지 이름:</label>
