--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         <div class="margin" style="width:400px;">
             <div class="inputDiv">
                 <label for="userName">플레이어 이름:</label>
-                <input type="text" name="userName" placeholer="주인님의 이름을 입력하세요." autofocus required>
+                <input type="text" name="userName" placeholder="주인님의 이름을 입력하세요." autofocus required>
             </div>
             <div class="inputDiv">
                 <label for="dogName">강아지 이름:</label>
