--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,7 @@ input[type=text] {
     width:100%;
     height: 100%;
     padding: 10px;
-    border: 2px solid;
+    border: 2px solid #aaa;
     border-radius: 8px;
     margin: auto;
     box-sizing: border-box;
