--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,13 @@ h1 {
     margin: auto;
 }
 
+label {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    padding: 10px;
+}
+
 input[type=text] {
     width:100%;
     height: 100%;
@@ -21,11 +28,6 @@ input[type=text] {
     border-radius: 8px;
     margin: auto;
     box-sizing: border-box;
-}
-
-.inputDiv {
-    display: flex;
-    padding: 10px;
 }
 
 .submitDiv {
