--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,7 +20,7 @@ label {
 }
 
 input[type=text] {
-    width:100%;
+    width:calc(400px-125px);
     height: 100%;
     padding: 10px;
     border: 2px solid #aaa;
