--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ label {
 }
 
 input[type=text] {
-    width: 100%;
+    width: 355px;
     height: 100%;
     padding: 10px;
     border: 2px solid #aaa;
