--- a/templates/snack.html
+++ b/templates/snack.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>우리집 강쥐의 MBTI는?</title>
+    <Link rel="stylesheet" href="/static/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&family=Gowun+Dodum&family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="snack">
-      {{myDog['name']}}(이)에게 간식을 줍니다.<br>
-    </div>
-    <div class="endSnack">
-      <form class="" action="/menu_table" method="get">
-        <button type="submit">메뉴</button>
-      </form>
+    <div class="choice_wrap">
+      <div class="center_wrap">
+        <div class="asw_wrap">
+          <div class="snack"></div>
+            <br><i><strong>{{myDog['name']}}</strong>(이)에게 간식을 줍니다.</i><br>
+        </div>
+        <div class="endSnack">
+          <div class="choice_bar">
+            <form class="" action="/menu_table" method="get">
+              <div class="chc_btn">
+                <button type="submit">메뉴</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
     <script type="text/javascript">
       const myDog={{myDog|tojson|safe}};
