--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,50 +1,80 @@
-body {
-    margin: 100px auto;
+@font-face {
+    font-family: 'YUniverse-B';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_yuniverse@1.0/YUniverse-B.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
-h1 {
-    font-family: 'Gowun Dodum', sans-serif;
-    text-align: center;
+@font-face {
+    font-family: 'S-CoreDream-3Light';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.margin {
-    width: 400px;
-    font-family: 'Gowun Dodum', sans-serif;
-    font-size: 20px;
-    margin: auto;
+@font-face {
+    font-family: 'Goyang';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Goyang.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.inputDiv {
-    display:inline-flex;
+@font-face {
+    font-family: 'TmoneyRoundWindExtraBold';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-07@1.0/TmoneyRoundWindExtraBold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
-label {
-    width: 125px;
-    display: inline-block;
-    padding: 10px;
+@media screen and (min-width: 500px) {
+    body {background: white;}
 }
 
-input[type=text] {
-    width: 200px;
-    height: 100%;
-    padding: 10px;
-    border: 2px solid #aaa;
-    border-radius: 8px;
-    margin: auto;
-    box-sizing: border-box;
-}
+/* reset */
+body, h1 {margin: 0; padding: 0;}
 
-.submitDiv {
-    margin:auto;
-    font-family: 'Gowun Dodum', sans-serif;
-}
+body {font-family: 'Gowun Dodum', sans-serif; min-height:100%; background:#fff; }
 
-.submitDiv > button {
-    margin: 10px;
-    padding: 10px;
-}
+h1 {font-family: 'TmoneyRoundWindExtraBold'; display: block; text-align: center; font-size: 40px;}
 
-.menu {
-    margin:auto;
-    font-family: 'Gowun Dodum', sans-serif;
-}
+button {font-family: 'S-CoreDream-3Light'; margin: 0; margin-top: 20px; padding:0; border:0; list-style: none; text-align: center;}
+
+
+.intro_wrap {max-width:600px; min-height:710px; position: relative; margin:0 auto; bottom:0; left:0; right:0; text-align:center; background-image: linear-gradient(#9AD0EC 0.02rem, transparent 0.04rem), linear-gradient(90deg, #9AD0EC 0.02rem, transparent 0.04rem); background-size: 2rem 2rem;}
+
+/*.header_wrap {}*/
+
+.intro_wrap .img_result {max-width: 400px; width: 100%; margin: 10px auto 0;}
+
+.intro_wrap .img_result img {width: 100%;}
+
+.run_wrap {max-width:600px; min-height:710px; position: relative; margin:0 auto; bottom:0; left:0; right:0; text-align:center; background-image: linear-gradient(#9AD0EC 0.02rem, transparent 0.04rem); background-size: 2rem 2rem; font-size: 20px;}
+
+.center_wrap {padding:0 25px; display: block; text-align: center; font-size: 20px;}
+
+.top_title {padding-top:50px; text-align: center;}
+
+.top_txt {display: inline-block; text-align:center; font-weight: 600; font-size: 20px;}
+
+.top_txt label {width: 125px; display: inline-block; padding:10px;}
+
+.con_wrap .puppyInfo, p {margin: 154px 0 154px 0;}
+
+.asw_wrap {margin: 120px 0 120px 0;}
+
+.btn_wrap button {display:inline-block; max-width:325px; width:100%; height:60px; margin-top: 20px; font-weight:600; font-size:25px; color:#fff; background:#9AD0EC}
+
+.menu_bar {text-align:center;}
+
+.menu_bar button {display:inline-block; max-width:140px; width:100%; height:50px; font-weight:600; font-size:18px; color:#fff; background:#9AD0EC}
+
+.top_menu button {margin-left: 442px;}
+
+.choice_wrap {max-width:600px; min-height:690px; position: relative; margin:0 auto; bottom:0; left:0; right:0; text-align:center; border: dashed 10px; border-color: #DFF6FF; font-size: 20px;}
+
+.choice_bar button {display:inline-block; max-width:550px; width:100%; height:50px; font-weight: bolder; font-size:18px; color: black; background-color:#DFF6FF;}
+
+input[type=text] {font-family: 'S-CoreDream-3Light'; width: 200px; height: 100%; padding: 10px; border: 2px solid #9AD0EC; margin: auto; box-sizing: border-box;}
+
+.feedStart, .walkStart, .result, .text, .snack {font-family: 'Goyang'; font-size: 25px; white-space: normal;}
+
