--- a/templates/afterMeal.html
+++ b/templates/afterMeal.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>우리집 강쥐의 MBTI는?</title>
+    <Link rel="stylesheet" href="/static/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&family=Gowun+Dodum&family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="result"></div>
-    <div class="endEating">
-      {{myDog['name']}}(이)가 밥을 다 먹었습니다.
-      <form class="" action="/menu_table" method="get">
-        <button type="submit">메뉴</button>
-      </form>
+    <div class="choice_wrap">
+      <div class="center_wrap">
+        <div class="asw_wrap">
+          <div class="result"></div>
+            <div class="endEating">
+              <br><i><strong>{{myDog['name']}}</strong>(이)가 밥을 다 먹었습니다.</i>
+            </div>
+        </div>
+        <div class="choice_bar">
+          <form class="" action="/menu_table" method="get">
+            <button type="submit">메뉴</button>
+          </form>
+        </div>
+      </div>
     </div>
     <script type="text/javascript">
       const choice={{choice|tojson|safe}};
