--- a/templates/meal.html
+++ b/templates/meal.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>우리집 강쥐의 MBTI는?</title>
+    <Link rel="stylesheet" href="/static/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&family=Gowun+Dodum&family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="feedIntro">
-      {{myDog['name']}}(이)에게 밥을 줍니다.
-    </div>
-    <div class="feedStart"></div>
-    <div class="menu">
-      {{myDog['name']}}(이)가 밥을 먹기 시작합니다.<br>
-      <form class="menu" action="/meal" method="get">
-        <button type="submit" name="choiceBtn" value=1>지켜보기</button>
-        <button type="submit" name="choiceBtn" value=2>다른 일 하기</button>
-      </form>
+    <div class="choice_wrap">
+      <div class="center_wrap">
+        <div class="asw_wrap">
+          <div class="feedIntro">
+            <br><I><strong>{{myDog['name']}}</strong>(이)에게 밥을 줍니다.</I>
+          </div>
+          <div class="feedStart"><br></div>
+          <div class="menu">
+            <br><I><strong>{{myDog['name']}}</strong>(이)가 밥을 먹기 시작합니다.</I><br>
+          </div>
+        </div>
+        <div class="choice_bar">
+          <form class="menu" action="/meal" method="get">
+            <div class="chc_btn">
+              <button type="submit" name="choiceBtn" value=1>지켜보기</button>
+            </div>          
+            <div class="chc_btn">
+              <button type="submit" name="choiceBtn" value=2>다른 일 하기</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
     <script type="text/javascript">
       const myDog={{myDog|tojson|safe}};
       const feedStartContainer=document.querySelector(".feedStart");
       feedStartContainer.innerText+=myDog['name']+': '  //feedstart()
-      feedStartContainer.innerText+=myDog['mbti'][0]=='E'?'좋아!!':'부담스러워서 못 먹겠어ㅜㅜ';
+      feedStartContainer.innerText+=myDog['mbti'][0]=='E'?' 좋아!!':' 부담스러워서 못 먹겠어ㅜㅜ';
     </script>
   </body>
 </html>
